test/functions/promotion/move-over-scalar-out.chpl
proc move(in lhs: int, out rhs: int) {
  rhs = lhs;
}
var A:[1..10] int;
var b: int;
move(A, b);

